--- a/src/components/Loader/loader.css
+++ b/src/components/Loader/loader.css
@@ -72,7 +72,6 @@
 }
 .lds-flickr {
   position: relative;
-  margin: 0 auto;
 }
 .lds-flickr div {
   position: absolute;
@@ -109,4 +108,8 @@
   -webkit-transform: translate(-52.5px, -52.5px) scale(0.525)
     translate(52.5px, 52.5px);
   transform: translate(-52.5px, -52.5px) scale(0.525) translate(52.5px, 52.5px);
+}
+
+.lds-css {
+  margin: 0 auto;
 }
