--- a/src/components/PersonDetails/styles.sass
+++ b/src/components/PersonDetails/styles.sass
@@ -3,7 +3,9 @@
   padding: 1rem
   justify-content: 
   min-width: 50%
+  text-align: center
   .subject-picture
     max-width: 250px
     border-radius: 10px
     margin-right: 5rem
+
