feat: random planet logic

--- a/src/components/RandomPlanet/styles.sass
+++ b/src/components/RandomPlanet/styles.sass
@@ -3,9 +3,13 @@
   padding: 1rem
   justify-content: flex-start
   align-items: center
+  width: 100%
+
   .planet-info
     margin-left: 50px 
+    text-align: center
   .planet-image
+    align-items:  center
     max-width: 250px
     border-radius: 10px
     margin-right: 5rem
