--- a/src/components/ItemDetails/styles.sass
+++ b/src/components/ItemDetails/styles.sass
@@ -3,9 +3,11 @@
   padding: 1rem
   justify-content: 
   min-width: 50%
-  text-align: center
+  
   .subject-picture
     max-width: 250px
     border-radius: 10px
-    margin-right: 5rem
+    margin-right: 1rem
+    display: flex
+    align-items: center
 
